# Grokden

./: .gitignore  .note  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  package-lock.json  package.json
docs/: pass3-notes.md  theme-audit.md  ui-redesign.md
scripts/: fix-desktop-shortcut.ps1  load-signing-env.ps1  publish-release.ps1  stress-agent-grid.mjs  stress-persistence.ts  stress-test-editor.mjs  stress-test-search.ts  verify-release.ps1
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: files.toml  grok-cli.toml  terminal.toml
src-tauri/src/: grok_cli.rs  lib.rs  main.rs  terminal.rs
src-tauri/src/workspace/: index.rs
src/lib/: ActivityRail.svelte  AgentActivityCompact.svelte  AgentActivityFeed.svelte  AgentModeDemo.svelte  Canvas.svelte  LaunchSplash.svelte  (+35 more)
static/: grokden-canvas.css  grokden-final-ui-reset.css  grokden-icon-palette.css  grokden-icon-palette.js  grokden-interaction-v2.js  grokden-layout-controls.css  grokden-layout-controls.js  grokden-menu-panel-safe.js  grokden-pass3-polish.css  grokden-premium-theme-fix.css  grokden-premium-theme.css  grokden-premium-theme.js  grokden-smooth-layout.css  grokden-supergrok-welcome.js  grokden-tab-panel-safe.css  grokden-terminal-toggle-final.js  grokden-tokens.css  grokden-ui-polish-hotfix.css  grokden-ui.css  grokden-welcome.css  liquid-glass-editor-gutter-fix.css  liquid-glass-editor-no-gutter-accent.css  liquid-glass-navigation.js  liquid-glass-rail-fix.css  liquid-glass-sidebar-fix.css  liquid-glass-sidebar-solid.css
(+10 files in other folders)
