[package]
name = "grokden"
version = "0.2.0"
description = "Grokden desktop workspace for Grok CLI"
authors = ["Grokden Contributors"]
edition = "2021"

[lib]
name = "grokden_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
portable-pty = "0.8"
base64 = "0.22"
parking_lot = "0.12"
dirs = "6"
git2 = "0.19"
ignore = "0.4"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2"
